Fix wordwrap.

--- a/vault/fe_assets/frontend.css
+++ b/vault/fe_assets/frontend.css
@@ -178,3 +178,4 @@ input[type=button].reset:hover,input[type=button].reset:active{color:#f88}
 .scaleXToZero{display:inline-block;overflow:hidden;transform:scaleX(0);transform-origin:{FE_Align};opacity:0;max-height:16px;max-width:0;transition:all .2s ease-out}
 .scaleXToOne{display:inline-block;overflow:hidden;transform:scaleX(1);transform-origin:{FE_Align};opacity:1;max-height:16px;max-width:auto;transition:all .2s ease-in}
 #logsTA{position:relative;top:-2px}
+.canBreak{white-space:normal;overflow-wrap:break-word}
